# senses

./: .gitignore  App.jsx  EFFECTS_GUIDE.md  README.md  SENSES_MODULES_INVENTORY.md  app.json  deps.md  package-lock.json  package.json
modules/senses-audio/: .gitignore  expo-module.config.json  index.ts
modules/senses-audio/android/: CMakeLists.txt  build.gradle
modules/senses-audio/android/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CircularBuffer.h  jni_bridge.cpp
modules/senses-audio/android/src/main/java/expo/modules/sensesaudio/: SensesAudioModule.kt
modules/senses-recorder/: expo-module.config.json  index.ts
modules/senses-recorder/android/: build.gradle
modules/senses-render/: expo-module.config.json  index.ts
modules/senses-render/android/: build.gradle
patches/: expo-dev-menu-interface+1.8.4.patch
plugins/: with-main-activity-keyfixes.js
scripts/: patch-rn76-compat.js
src/capture/: sidecar.js  sidecar.test.cjs  takes-io.js  takes.js  takes.test.cjs
src/components/: CameraBase.jsx  EffectScreen.jsx  LiveChrome.jsx  OverlayRail.jsx  SettingsSheet.jsx
src/hooks/: useMotion.js  useRecorder.js  useTakeCapture.js
src/modes/: index.js  validate.js
src/modes/bloom/: dsp.js  dsp.test.cjs  manifest.js  processor.js  render.js  state.js  synth.js
src/modes/color-quantize/: index.jsx
src/modes/grain-field/: index.jsx  manifest.js  processor.js  render.js  synth.js
src/modes/larsen/: dsp.js  index.js  (+6 more)
src/render/: align.js  align.test.cjs  renderTake.js
src/screens/: EditorStub.jsx  Menu.jsx  TakesLibrary.jsx
src/state/: params.js
(+53 files in other folders)
